--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"mri": "^1.1.0",
 		"prompt-skeleton": "^0.4.0",
 		"split-lines": "^1.1.0",
+		"strip-ansi": "^4.0.0",
 		"window-size": "^1.1.0"
 	}
 }
