--- a/package.json
+++ b/package.json
@@ -35,5 +35,12 @@
 		"split-lines": "^2.1.0",
 		"strip-ansi": "^6.0.1",
 		"window-size": "^1.1.0"
+	},
+	"devDependencies": {
+		"eslint": "^8.7.0"
+	},
+	"scripts": {
+		"lint": "eslint .",
+		"prepublishOnly": "npm run lint"
 	}
 }
